# b2-hm14

./: README.md  main.py  pyproject.toml
docs/: conf.py  index.rst
fast_api_app/: main.py  schemas.py
fast_api_app/conf/: config.py
fast_api_app/database/: connect_db.py  models.py
fast_api_app/repository/: users.py
fast_api_app/routes/: auth.py  users.py
fast_api_app/services/: auth.py  email.py
migration/: env.py
migration/versions/: 37f6fb105986_conf.py  ab28393760f6_conf.py
tests/: conf_test.py  test_auth_route.py  test_repository_users.py
