[tool.poetry]
name = "b2-hm14"
version = "0.1.0"
description = ""
authors = ["Vadim-3 <128088822+Vadim-3@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
sqlalchemy = "^2.0.22"
pydantic-settings = "^2.0.3"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
alembic = "^1.12.1"
psycopg2 = "^2.9.9"
libgravatar = "^1.0.4"
passlib = "^1.7.4"
pathlib = "^1.0.1"
python-jose = "^3.3.0"
fastapi-mail = "^1.4.1"
cloudinary = "^1.36.0"
fastapi-limiter = "^0.1.5"
python-multipart = "^0.0.6"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
redis = "4.6"
environ = "^1.0"
sphinx = "^7.2.6"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"


[tool.pytest.ini_options]
pythonpath = ["."]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
